--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-table, td {
-    border: 1px solid black;
+#title {
+    margin-left: 20px;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 20px;
 }
 
 td {
-    width: 100px;
-    height: 100px;
+    border: 1px black solid;
+    width: 40px;
+    height: 40px;
 }
