--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+  font-family: fantasy;
+}
+
+h1 {
+  margin-left: 30px;
+  margin-top: 30px;
+  text-align: center;
+}
+
 .table {
   display: table;
 }
@@ -8,4 +18,43 @@
 
 .pixel {
   display: table-cell;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+section > .color-palette {
+  margin-bottom: 5px;
+}
+
+.color-palette {
+  display: inline-block;
+  align-items: center;
+  text-align: center;
+}
+
+.color {
+  border: solid 1px black;
+  display: inline-flex;
+  height: 40px;
+  width: 40px;
+  align-items: center;
+}
+
+.black {
+  background-color: black;
+}
+
+.red {
+  background-color: red;
+}
+
+.green {
+  background-color: green;
+}
+
+.blue {
+  background-color: blue;
 }
