--- a/style.css
+++ b/style.css
@@ -4,6 +4,26 @@
   box-sizing: border-box;
 }
 
-body {
- 
+.color {
+  border: 1px solid rgb(0, 0, 0);
+  width: 40px;
+  height: 40px;
+  display: inline-block;
 }
+
+.black {
+  background-color: rgb(0, 0, 0);
+}
+
+.blue {
+  background-color: rgb(0, 0, 255);
+}
+
+.red {
+  background-color: rgb(255, 0, 0);
+}
+
+.green {
+  background-color: rgb(0, 255, 0);
+}
+
