--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 #title {
+  margin: 25px 0;
   text-align: center;
+}
+
+#color-palette {
+  text-align: center;
+}
+.color {
+  border: 1px solid black;
+  display: inline-block;
+  height: 50px;
+  margin: 50px 10px;
+  width: 50px;
 }
