--- a/style.css
+++ b/style.css
@@ -1,40 +1,72 @@
 * {
-    margin: 0;
+  margin: 0;
 }
+
+/* ------------------------------------ */
+/* TITLE */
+/* ------------------------------------ */
 
 #title {
-    text-align: center;
-    margin: 20px
+  text-align: center;
+  margin: 20px;
 }
 
+/* ------------------------------------ */
+/* COLOR-PALETTE */
+/* ------------------------------------ */
+
 #color-palette {
-    align-self: center;
-    width: 100%;
-    height: 80px;
-    background-color: rgb(165, 165, 165);
-    display: flex;
-    justify-content: center;
+  align-self: center;
+  width: 100%;
+  height: 80px;
+  background-color: rgb(165, 165, 165);
+  display: flex;
+  justify-content: center;
 }
 
 .color {
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
-    margin: 15px 10px;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  margin: 20px 10px;
 }
 
 .black {
-    background-color: black;
+  background-color: black;
 }
 
 .second-color {
-    background-color: rgb(214, 127, 188);
+  background-color: rgb(214, 127, 188);
 }
 
 .third-color {
-    background-color: rgb(187, 72, 187);
+  background-color: rgb(187, 72, 187);
 }
 
 .fourth-color {
-    background-color: rgb(135, 12, 184);
+  background-color: rgb(135, 12, 184);
+}
+
+/* ------------------------------------ */
+/* PIXEL BOARD */
+/* ------------------------------------ */
+
+#pixel-board {
+  display: table;
+  border: 1px black solid;
+  width: auto;
+  height: auto;
+  margin: 15px auto;
+}
+
+.row {
+  display: table-row;
+}
+
+.pixel {
+  display: table-cell;
+  border: black 1px solid;
+  background-color: white;
+  width: 40px;
+  height: 40px;
 }
