--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.color {
+.color, .pixel {
   border: 1px solid;
   width: 40px;
   height: 40px;
@@ -15,4 +15,12 @@
 }
 #box4 {
   background-color: red;
+}
+#pixel-board {
+  margin-top: 25px;
+  width: 210px;
+  height: 210px;
+}
+.pixel {
+  background-color:white;
 }
