--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .color {
-    width: 40px;
-    height: 40px;
+    width: 100px;
+    height: 100px;
     border: 1px solid black;
     padding: 5px;  
     box-sizing: border-box;
+    display: inline-block;
 }
 #color-black {
     background-color: black;
