mudando as cores da paleta

--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@
   background-color: black;
 }
 #c2 {
-  background-color: blue;
+  background-color: violet;
 }
 #c3 {
-  background-color: red;
+  background-color: magenta;
 }
 #c4 {
-  background-color: green;
+  background-color: aqua;
 }
 #color-palette {
   margin: 50px;
