--- a/style.css
+++ b/style.css
@@ -20,3 +20,14 @@
 #verde {
   background-color: green;
 }
+
+#pixel-board {
+  display: grid;  
+  grid-template-columns: repeat(5, 40px);
+}
+
+.pixel {
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
+}
