--- a/style.css
+++ b/style.css
@@ -1,47 +1,63 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 body {
-    background-color: rgb(245, 245, 245);
-    margin: 1% 3%;
+	background-color: whitesmoke;
+	margin: 1% 3%;
 }
 
 h1 {
-    font-size: 40px;
-    font-family: 'Courier New', Courier, monospace;
-    letter-spacing: 0.5px;
-    margin-bottom: 20px;
+	font-size: 40px;
+	font-family: Courier New;
+	letter-spacing: 0.5px;
+	margin-bottom: 20px;
 }
 
 ul {
-    display: flex;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 
 li {
-    list-style: none;
-    background-color: black;
-    height: 50px;
-    width: 50px;
-    margin-right: 10px;
-    border: 1px solid black;
+	list-style: none;
+	background-color: black;
+	height: 50px;
+	width: 50px;
+	margin-right: 10px;
+	border: 1px solid black;
 }
 
-li:nth-child(1) {
-    background-color: black;
+li:nth-child( 1 ) {
+  background-color: black;
 }
 
-li:nth-child(2) {
-    background-color: rgb(233, 21, 21);
+li:nth-child( 2 ) {
+  background-color: rgb(233, 21, 21);
 }
 
-li:nth-child(3) {
-    background-color: rgb(30, 30, 245);
+li:nth-child( 3 ) {
+  background-color: rgb(30, 30, 245);
 }
 
-li:nth-child(4) {
-    background-color: rgb(2, 143, 2);
+li:nth-child( 4 ) {
+  background-color: rgb(2, 143, 2);
+}
+
+table {
+	display: table;
+}
+
+tr {
+	display: table-row;
+}
+
+td {
+	display: table-cell;
+	width: 40px;
+	height: 40px;
+	border: 1px solid black;
+	background-color: white;
 }
