--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 .color {
   margin: 5px;
-  width: 90px;
-  height: 90px;
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
 }
 #color1 {
@@ -18,4 +18,17 @@
 }
 #color4 {
   background-color: green;
+}
+
+#pixel-board{
+    display:flex;
+    flex-wrap: wrap;
+    width:250px;
+    margin-left: 20px;
+}
+.pixel{
+    width: 40px;
+    height:40px;
+    border: black solid 1px;
+    background-color: white;
 }
