--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
   padding: 10px;
+  background-color: rgb(181, 182, 182);
 }
 
 .color {
-  border: solid 1px;
-  height: 40px;
-  width: 40px;
+  border:black solid 1px;
+  height: 80px;
+  width: 80px;
   display: inline-block;
+  border-radius: 50%;
+  margin-right: 8px;
 }
