--- a/style.css
+++ b/style.css
@@ -8,39 +8,50 @@ h1 {
   text-align: center;
 }
 
-.table {
-  display: table;
-}
-
-.pixel-board {
-  display: table-row;
-}
-
-.pixel {
-  display: table-cell;
-}
-
 section {
+  
   display: flex;
   justify-content: center;
-}
-
-.color-palette {
-  display: inline-block;
-  align-items: center;
-  text-align: center;
 }
 
 section > .color-palette {
   margin-bottom: 5px;
 }
 
+.color-palette {
+  display: inline-block;
+  align-items: center;
+  text-align: center;
+  
+}
+
 .color {
-  border: solid 1px black;
+  border: solid 1px;
   display: inline-flex;
   height: 40px;
   width: 40px;
   align-items: center;
+}
+
+.section-pixel-board{
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.pixel-board {
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
+}
+
+.pixel { 
+  display: inline-flex;
+  align-items: center;
+  background-color: white;
+  border: solid black 1px;
+  height: 40px;
+  width: 40px;
 }
 
 .black {
@@ -57,4 +68,14 @@ section > .color-palette {
 
 .blue {
   background-color: blue;
+}
+
+.boardline {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.clear-board {
+  margin-left: 20px;
+  margin-top: 20px;
 }
