--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-	padding: 0;
+  padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
@@ -11,7 +11,7 @@ body {
 
 h1 {
 	font-size: 40px;
-	font-family: Courier New;
+	font-family: 'Courier New';
 	letter-spacing: 0.5px;
 	margin-bottom: 20px;
 }
@@ -47,6 +47,8 @@ li:nth-child( 4 ) {
 }
 
 table {
+	margin-top: 20px;
+	margin-left: 0.5%;
 	display: table;
 }
 
