--- a/style.css
+++ b/style.css
@@ -3,4 +3,12 @@
   height: 40px;
   border: 1px solid black;
   display: inline-block;
+  margin-bottom: 50px;
+}
+
+td {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  
 }
