--- a/style.css
+++ b/style.css
@@ -44,3 +44,24 @@
   margin-left: 10px;
   float: left;
 }
+
+.container {
+  width: 70%;
+  border: 7px dotted rgb(0, 191, 255);
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  background-color: rgb(255, 255, 205);
+}
+
+.td {
+  display: table-row;
+}
+
+.pixel {
+  display: table-cell;
+  border: 1px solid black;
+  background-color: rgb(255, 255, 255);
+  height: 40px;
+  width: 40px;b
+}
