--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+table {
+  display: table;
+  border-collapse: collapse;
+}
+
+tr {
+  display: table-row;
+}
+
+td {
+  display: table-cell;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+}
+
 #title {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
@@ -6,7 +22,7 @@
 #color-palette div {
   width: 40px;
   height: 40px;
-  border: 2px solid black;
+  border: 1px solid black;
   display: inline-block;
 }
 
