--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 #cor_1 {
-  background-color: #00b894;
+  background-color: black;
   display: inline-block;
   border-width: 1px;
   border-style: solid;
