--- a/style.css
+++ b/style.css
@@ -7,4 +7,22 @@
   vertical-align: middle;
   width: 35px;
 
+
+}
+
+#pixel-board{
+padding:0px;
+width: 200px;
+height: 200px;
+margin: 30px;
+}
+
+.pixel {
+  margin: 0px;
+  padding: 0px;
+  border: 1px solid black;
+  display: inline-block;
+  width: 38px;
+  height: 38px;
+
 }
