--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@
     box-sizing: border-box;
     display: inline-block;
 }
-#color-black {
+#black {
     background-color: black;
 }
-#color-red {
+#red {
    background-color: red;
 }
-#color-blue {
+#blue {
     background-color: blue;
 }
-#color-green {
+#green {
     background-color: green;    
 }
