--- a/style.css
+++ b/style.css
@@ -59,9 +59,9 @@
 }
 
 .pixel {
+  height: 40px;
+  width: 40px;
   display: table-cell;
   border: 1px solid black;
   background-color: rgb(255, 255, 255);
-  height: 40px;
-  width: 40px;b
 }
