--- a/style.css
+++ b/style.css
@@ -27,3 +27,21 @@
   background-color: rgb(0, 255, 0);
 }
 
+.pixel {
+  display: table;
+}
+
+.tr {
+  display: table-row;
+}
+
+.td {
+  display: table-cell;
+}
+
+.pixel {
+  border: 1px solid rgb(0, 0, 0);
+  width: 40px;
+  height: 40px;
+}
+
