--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
 /* Starting */
+
+#title {
+  text-align: center;
+}
+
+#color-palette {
+  text-align: center;
+}
+
+.color {
+  display: inline-block;
+  width: 75px;
+  height: 75px;
+  border: solid black 1px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
