--- a/style.css
+++ b/style.css
@@ -15,3 +15,20 @@
   width: 50px;
   display: table-cell;
 }
+
+#pixel-board {
+  display: table;
+}
+
+.board-tr {
+  display: table-row;
+}
+
+.pixel {
+  display: table-cell;
+  height: 50px;
+  width: 50px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+}
