--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 .color {
     border: solid black 1px;
     display: inline-block;
-}
-
-.th {
-    background-color: white;
+    width: 50px;
+    height: 50px;
 }
