--- a/style.css
+++ b/style.css
@@ -1,28 +1,37 @@
 .color {
-    border: solid 1px black;
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    margin: 3px;
+  border: solid 1px black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  margin: 3px;
+  margin-top: 20px;
+  margin-left: 10px;
 }
 
 p {
-    display: inline;
-    margin: 10px;
+  display: inline;
+  margin: 5px;
 }
 
 .color1 {
-    background-color: black;
+  background-color: black;
 }
 
 .color2 {
-    background-color: blueviolet;
+  background-color: blueviolet;
 }
 
 .color3 {
-    background-color: yellow;
+  background-color: yellow;
 }
 
 .color4 {
-    background-color: green;
+  background-color: green;
+}
+
+.pixel {
+  background-color: 'white';
+  width: 40px;
+  height: 40px;
+  border: solid 1px black;
 }
