--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@
   border-style: solid;
   border-color: black;
 }
+.pixel {
+  background-color: white;
+  display: inline-block;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+}
+#pixel-board {
+  display: inline-block;
+}
