--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-#color-palette {
-    display: inline-block;
-}
-
 .color {
-    border: 1px solid #000;
+    display: inline-block;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    margin-left: 7px;
 }
