--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
 /*codigo CSS*/
 #title {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 2%;
+}
+
+#color-palette {
+  display: flex;
+}
+
+.color {
+  border: 1px solid black;
+  width: 50px;
+  height: 50px;
+}
+
+#black {
+  background-color: black;
 }
