--- a/style.css
+++ b/style.css
@@ -5,3 +5,15 @@
     background-color:white;
     border: solid 1px black;
 }
+#vermelho {
+    background-color: red;
+}
+#azul {
+    background-color: blue;
+}
+#lilas {
+    background-color:violet;
+}
+#preto {
+    background-color: black;
+}
