--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .color {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid black;
   width: 40px;
   height: 40px;
   display: inline-block;
@@ -42,7 +42,7 @@
 }
 
 .pixel {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid black;
   width: 40px;
   height: 40px;
   background-color: white;
