--- a/style.css
+++ b/style.css
@@ -3,7 +3,18 @@
     width: 50px;
     height: 50px;
     margin: 4px;
-    float: left;
+    display: inline-block;
+}
+.pixel{
+    border: 1px solid black;
+    margin-top:  0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    
 }
 .div1{
     background-color: black;
