--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
-/* informação */
+.color {
+  border: 1px solid black;
+  width: 50px;
+  height: 50px;
+}
+.black {
+  background-color: black;
+}
+.red {
+  background-color: red;  
+}
+.blue {
+  background-color: blue;
+}
+.green{
+  background-color: green;
+}
