requisto 4 e tvz 5 arrumados

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ p {
 }
 
 .pixel {
-  background-color: 'white';
+  background-color: 'rgb(255, 255, 255)';
   width: 40px;
   height: 40px;
   border: solid 1px black;
