--- a/style.css
+++ b/style.css
@@ -7,10 +7,7 @@
 }
 .pixel{
     border: 1px solid black;
-    margin-top:  0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
+    border: 0px;
     width: 40px;
     height: 40px;
     display: inline-block;
