--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@
   width: 40px;
   height: 40px;
 }
+
+.pixel {
+  display: inline-block;
+  margin: 0;
+  border-style: solid;
+  border-width: 1px;
+}
