--- a/style.css
+++ b/style.css
@@ -3,5 +3,36 @@ body {
   padding: 0;
   width: 1366px;
   height: 768px;
-  background-color: rgb(23, 190, 23);
+  background-color: rgb(110, 133, 110);
+}
+
+#color-palette {
+  width: 300px;
+  text-align: center;
+  margin: 10px auto;
+}
+
+.color {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 5px;
+  border: 1px solid black;
+  display: inline-block;
+}
+
+#black {
+  background-color: black;
+}
+
+#green {
+  background-color: green;
+}
+
+#blue {
+  background-color: blue;
+}
+
+#orange {
+  background-color: orange;
 }
