--- a/style.css
+++ b/style.css
@@ -24,3 +24,20 @@
 #yellow {
   background-color: yellow;
 }
+
+#pixel-board {
+  display: table;
+  margin-top:5px;
+}
+
+.tr {
+  display: table-row;
+}
+
+.pixel {
+  display: table-cell;
+  width: 40px;
+  height: 40px;
+  border: solid 1px black;
+  background-color: white;
+}
