--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
   padding: 0px;
   width: 200px;
   height: 200px;
-  margin: 30px;
+  margin: 0px;
+  ;
+  margin-top: 40px;
 }
 
 .pixel {
@@ -24,5 +26,5 @@
   display: inline-block;
   width: 38px;
   height: 38px;
-
+  background-color: rgb(255, 255, 255)
 }
