4-cor nao funfa, arrumado

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 #pixel-board > div > .pixel { 
   display: table-cell;
-  background-color: 'rgb(255, 255, 255)';
+  background-color: white;
   border: 1px black solid;
   height: 40px;
   width: 40px;
