--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+table {
+  margin: 0px;
+}
 .color {
   border: 1px solid black;
   width: 50px;
@@ -14,4 +17,12 @@
 }
 .green{
   background-color: green;
+}
+.pixels {
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  margin: 0px;
+  padding: 0px;
 }
