--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-.paletteTwo {
+#paletteTwo {
   background-color: #f4d06f;
 }
 
-.paletteThree {
+#paletteThree {
   background-color: #c44900;
 }
 
-.paletteFour {
+#paletteFour {
   background-color: #9dd9d2;
 }
 
