--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
 .color {
   border: 1px solid black;
   display: inline-block;
-  width: 8%;
-  height: 60px;
+  width: 55px;
+  height: 55px;
+  margin: 1px;
+}
+
+#black {
+  background-color:black
+}
+
+#red {
+  background-color:red;
+}
+
+#green {
+  background-color: green;
+}
+
+#blue {
+  background-color: blue;
 }
