--- a/style.css
+++ b/style.css
@@ -18,12 +18,15 @@
     background-color: black;
 }
 #pixel-board{
-    width: 125px;
-    height: 125px;
+   height: 250px;
+   width: 250px;
     border: black solid 1px;
 }
-.pixel {
-    width: 25px;
-    
+ .pixel {
+  
+    width: 40px;
+    height: 40px;
+    border: solid black 1px;
     background-color: white;
+    display: inline-block;
 }
