--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* Starting */
 
+body {
+  background-color: lightblue;
+}
+
 #title {
   text-align: center;
 }
@@ -15,4 +19,19 @@
   border: solid black 1px;
   margin-right: 10px;
   margin-left: 10px;
+}
+
+#pixel-board {
+  text-align: center;
+  border: solid black 1px;
+  border-collapse: collapse;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pixel {
+  width: 75px;
+  height: 75px;
+  border: solid black 1px;
 }
