--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*codigo CSS*/
 #title {
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 2%;
@@ -16,4 +15,16 @@
 
 #black {
   background-color: black;
+}
+
+#blue {
+    background-color: blue;
+}
+
+#red {
+    background-color:red;
+}
+
+#yellow {
+    background-color: yellow;
 }
