--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@
   border-style: solid;
   border-color: black;
 }
+#color-palette {
+  display: inline-block;;
+}
 .pixel {
   background-color: white;
   display: inline-block;
@@ -42,6 +45,15 @@
   border-style: solid;
   border-color: black;
 }
+.color {
+  width: 50px;
+  height: 50px;
+}
+.pixel {
+  width: 50px;
+  height: 50px;
+}
 #pixel-board {
   display: inline-block;
+  width: 260px;
 }
