--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@
 } */
 
 .color {
-  height: 80px;
-  width: 80px;
-  background-color: black;
+  height: 57px;
+  width: 57px;
   border: solid;
   border-width: 1px;
   border-color: black;
   display: inline-block;
+}
+
+#color-black {
+  background-color: black;
 }
 
 #color-green {
@@ -22,4 +25,16 @@
 
 #color-blue {
   background-color: blue;
+}
+
+#pixel-board {
+  margin-top: 20px;
+}
+
+.pixel {
+  height: 40px;
+  width: 40px;
+  border: solid;
+  border-color: black;
+  background-color: white;
 }
