--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@
 #black {
     background-color: black;
 }
+
+.pixel {
+    border: 1px solid black;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+}
