--- a/style.css
+++ b/style.css
@@ -2,26 +2,26 @@ table {
   margin: 0px;
 }
 .color {
-  border: 1px solid black;
-  width: 50px;
-  height: 50px;
+  border: 1px solid rgb(0, 0, 0);
+  width: 38px;
+  height: 38px;
 }
 .black {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 .red {
-  background-color: red;  
+  background-color: rgb(255, 0, 0)  
 }
 .blue {
-  background-color: blue;
+  background-color: rgb(0, 0, 255);
 }
 .green{
-  background-color: green;
+  background-color: rgb(0, 255, 0);
 }
-.pixels {
-  background-color: white;
-  width: 40px;
-  height: 40px;
+.pixel {
+  background-color: rgb(255, 255, 255);
+  width: 38px;
+  height: 38px;
   border: 1px solid black;
   margin: 0px;
   padding: 0px;
