--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-#color-palette { 
-    display: table; 
-}
-
 #paleta1 {
     background-color: black;
 }
@@ -18,6 +14,11 @@
     background-color: yellowgreen;
 }
 
+#color-palette #pixel-board { 
+    margin-top: 20px;
+    display: table; 
+}
+
 .tr { 
     display: table-row; 
 }
@@ -28,4 +29,13 @@
     border: 1px solid black;
     padding: 30px;
     margin: 10px;
+}
+
+.pixel {
+    display: table-cell;
+    width: 10px;
+    border: 1px solid black;
+    padding: 30px;
+    margin: 10px;
+    background-color: white;
 }
