--- a/style.css
+++ b/style.css
@@ -6,24 +6,26 @@
   margin-left: 0;
   vertical-align: middle;
   width: 35px;
+  margin: 0;
+  padding: 0;
 
 
 }
 
 #pixel-board {
-  padding: 0px;
+  padding: 0;
   width: 200px;
   height: 200px;
-  margin: 0px;
-  margin-top: 40px;
+
+
+
 }
 
 .pixel {
-  margin: 0px;
-  padding: 0px;
+
   border: 1px solid black;
   display: inline-block;
   width: 38px;
   height: 38px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb (255, 255, 255);
 }
