--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     display: table; 
     border: solid;
     border-width: 1px;
-    margin-top: 3%;
+    margin-top: 2%;
     margin-left: 1%; 
    
 }
@@ -26,4 +26,14 @@
     border-width: 1px;
     width: 40px;
     height: 40px;
+}
+
+#clear-board{
+    margin-top: 2%;
+    margin-left: 1%; 
+}
+
+.color:hover{
+    width: 50px;
+    height: 50px;
 }
