--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@
 #green {
   background-color: green;
 }
+
+.pixel{
+  display: table-cell;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+}
