--- a/style.css
+++ b/style.css
@@ -18,4 +18,10 @@
     width: 40px;
     height: 40px;
     padding: 0;
+    margin: 0;
+    border-collapse: collapse;
+}
+
+table {
+    border-collapse: collapse;
 }
