--- a/style.css
+++ b/style.css
@@ -48,10 +48,12 @@
   height: 50px;
 }
 .pixel {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
+  border-width: 1px;
+  border-style: solid;
 }
 #pixel-board {
   display: inline-block;
-  width: 260px;
+  width: 250px;
 }
