--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 .color {
   border: 1px solid black;
   display: inline-block;
-  width: 55px;
-  height: 55px;
-  margin: 1px;
+  width: 40px;
+  height: 40px;
 }
 
 #black {
@@ -20,4 +19,11 @@
 
 #blue {
   background-color: blue;
+}
+
+.pixel {
+  border: 1px solid black;
+  background-color: white;
+  width: 40px;
+  height: 40px;
 }
