Requisito 5 - Faça com que cada elemento do quadro de pixels possua 40 pixels de largura, 40 pixels de altura e seja delimitado por uma borda preta de 1 pixel.

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@
   height: 40px;
   border-width: 1px;
   border-style: solid;
+  border-color: black;
 }
 #pixel-board {
   display: inline-block;
