--- a/style.css
+++ b/style.css
@@ -6,8 +6,31 @@
   height: 40px;
 }
 
+.display-table{
+  display: table;
+}
+.display-table > div { 
+  display: table-row; 
+}
+.display-table > div > div { 
+  display: table-cell;
+  padding: 5px;
+}
 .pixel {
   display: inline-block;
+  border-style: solid;
+  border-width: 1px;
+
+}
+.line{
+  margin:0;
+  padding: 0;
+}
+
+#clear-board{
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
   border-style: solid;
   border-width: 1px;
 }
