--- a/style.css
+++ b/style.css
@@ -33,9 +33,10 @@
 
 .pixel {
     display: table-cell;
-    width: 10px;
+    width: 40px;
+    height: 40px;
     border: 1px solid black;
-    padding: 30px;
+    padding: 40px;
     margin: 10px;
     background-color: white;
 }
