--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 h1 {
   text-align: center;
 }
@@ -12,4 +17,23 @@ h1 {
   border: black solid 1px;
   display: inline-block;
   margin: 10px;
+}
+
+#pixel-board {
+  text-align: center;
+  padding-top: 30px;
+
+}
+
+.pixel-row {
+  height: 50px;
+}
+
+.pixel {
+  width: 50px;
+  height: 50px;
+  border: black solid 1px;
+  display: inline-block;
+  background-color: white;
+
 }
