--- a/style.css
+++ b/style.css
@@ -4,4 +4,12 @@
     width: 40px;
     height: 40px;
     margin-left: 7px;
+    margin-bottom: 20px;
+}
+
+.pixel {
+    display: inline-block;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
 }
