--- a/style.css
+++ b/style.css
@@ -28,4 +28,13 @@ tr, td {
   border: 1px solid black;
   width: 40px;
   height: 40px;
+  background-color: white;
+}
+
+.pixel:hover {
+  background-color: black;
+}
+
+.selected:active {
+  background-color: black;
 }
