--- a/style.css
+++ b/style.css
@@ -4,16 +4,18 @@
 }
 
 h1 {
+  padding-top: 25px;
   text-align: center;
 }
 
 #color-palette {
   text-align: center;
+  padding-top: 50px;
 }
 
 .color {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: black solid 1px;
   display: inline-block;
   margin: 10px;
@@ -26,12 +28,12 @@ h1 {
 }
 
 .pixel-row {
-  height: 50px;
+  height: 40px;
 }
 
 .pixel {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: black solid 1px;
   display: inline-block;
   background-color: white;
