--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@ header {
 table {
   margin: 0 auto;
   border-collapse: collapse;
+  margin-bottom: 10px;
 }
 
-.color {
+.color , .pixel {
   border: 1px solid black;
   width: 40px;
   height: 40px;
+  padding: 0;
 }
 
 .color1 {
@@ -32,4 +34,8 @@ table {
 
 .color4 {
   background-color: orange;
+}
+
+#pixel-board td {
+  background-color: white;
 }
