--- a/style.css
+++ b/style.css
@@ -22,3 +22,15 @@ body {
   display: inline-block;
   border: 1px solid black;
 }
+
+#pixel-board {
+  padding-top: 40px;
+  margin: auto;
+  border-spacing: 0;
+}
+
+.pixel {
+  height: 40px;
+  width: 40px;
+  border: 1px solid black;
+}
