--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@
     
 }
 
+.color {
+    height: 10px;
+    width: 10px;
+    
+}
+
 #black {
     color: black;
-    border: 1px;
+    border-width: 1px;
     border-color: black;
     border-style: solid;
     left: 10px;
@@ -14,7 +20,7 @@
 
 #blue {
     color: blue;
-    border: 1px;
+    border-width: 1px;
     border-color: black;
     border-style: solid;
     left: 25px;
@@ -23,7 +29,7 @@
 
 #green {
     color: green;
-    border: 1px;
+    border-width: 1px;
     border-color: black;
     border-style: solid;
     display: inline;
@@ -32,7 +38,7 @@
 
 #red {
     color: red;
-    border: 1px;
+    border-width: 1px;
     border-color: black;
     border-style:solid;
     display: inline;
