--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 #color-palette{
-    
+    display: table-row;
 }
 
 #black{
@@ -21,4 +21,14 @@
 
 #green{
     background-color: green;
+}
+
+#pixel-board{
+   
+}
+
+.pixel{
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
 }
