--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 #color-palette {
   display: inline-block;
   width: 400px;
+  cursor: pointer;
 }
 
 .color {
@@ -33,4 +34,5 @@ body {
   height: 40px;
   width: 40px;
   border: 1px solid black;
+  background-color: white;
 }
