--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
-#color-palette {
+#pixel-board , #color-palette {
   display: inline-block;
   font-size: 0;
 }
 
-.color {
+#pixel-board {
+  border: 1px solid;
+}
+
+.row-pixel:not( :last-child ) {
+  border-bottom: 1px solid;
+}
+
+.pixel , .color {
   display: inline-block;
   width: 40px;
   height: 40px;
+}
+
+.pixel:not( :last-child ) {
+  border-right: 1px solid;
 }
 
 .color {
