--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 #clear-board{
   display: inline-block;
   padding: 10px;
-  margin-top: 10px;
+  margin: 10px;
   border-style: solid;
   border-width: 1px;
 }
