Requisito 6 - Defina a cor preta como cor inicial. Ao carregar a página, a cor preta já deve estar selecionada para pintar os pixels

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   display: inline-block;
 }
 
+.selected {
+  background-color: black;
+}
+
 #cor_1 {
   background-color: black;
   display: inline-block;
