Adiçao da primeira cor preta

--- a/style.css
+++ b/style.css
@@ -6,26 +6,26 @@
 }
 
 .color {
-    border: solid;
-    border-width: 1px;
-    border-color: black;
-    width:70px;
-    height:70px;
-    display: inline-block
+	border: solid;
+	border-width: 1px;
+	border-color: black;    
+	width:70px;
+	height:70px;
+	display: inline-block;
 }
 
-#green {
-    background-color: green;
+#black {
+  background-color:  black;
 }
 
 #blue {
-    background-color: blue;
+  background-color:  blue;
 }
 
 #red {
-    background-color: red;
+  background-color:  red;
 }
 
 #yellow {
-    background-color: yellow;
+  background-color: yellow;
 }
