--- a/style.css
+++ b/style.css
@@ -1,22 +1,30 @@
-.color{
-    display: inline-block;
-    border: solid black 1px;
-    width: 50px;
-    height: 50px;
+.color {
+  display: inline-block;
+  border: solid black 1px;
+  width: 50px;
+  height: 50px;
 }
 
-#color-palette :nth-child(1) {
-background-Color: red;
+#color-palette :nth-child( 1 ) {
+  background-color: black;
 }
 
-#color-palette :nth-child(2) {
-    background-Color: yellow;
+#color-palette :nth-child( 2 ) {
+  background-color: yellow;
 }
 
-#color-palette :nth-child(3) {
-    background-Color: green;
+#color-palette :nth-child( 3 ) {
+  background-color: green;
 }
-    
-#color-palette :nth-child(4) {
-    background-Color: rgb(0, 140, 255);
+
+#color-palette :nth-child( 4 ) {
+  background-color: rgb(0, 140, 255);
 }
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  border: solid black 1px;
+  box-sizing: border-box;
+}
+
