--- a/style.css
+++ b/style.css
@@ -31,8 +31,13 @@ body {
 }
 
 .pixel {
-  height: 40px;
-  width: 40px;
+  height: 38px;
+  width: 39px;
   border: 1px solid black;
   background-color: white;
+}
+
+tr .pixel:first-child {
+  height: 38px;
+  width: 38px;
 }
