--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+#title{
+    margin-left: 60px;
+}
+
 .color{
     list-style: none;
-    width: 150px;
-    height: 150px;
+    width: 60px;
+    height: 60px;
     display: inline-block;
     border: solid #000;
     border-width: 1px;
@@ -18,10 +22,18 @@
 }
 
 .pixel{
-    width: 150px;
-    height: 150px;
+    width: 40px;
+    height: 40px;
     display: inline-block;
     border: solid #000;
     border-width: 1px;
-    margin-right: 4px;
+    margin-right: 0px;
+}
+
+#pixel-board{
+    margin-left: 60px;
+}
+
+.table-row{
+    height: 42px;
 }
