--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
   margin: 0;
 }
 
-#color-palette > span {
+.input-colors {
+  display: none;
+}
+
+#black , #second-color , #third-color , #fourth-color {
   display: inline-block;
   width: 50px;
   height: 50px;
@@ -14,14 +18,14 @@
   background-color: black;
 }
 
-#red {
+#second-color {
   background-color: red;
 }
 
-#blue {
+#third-color {
   background-color: blue;
 }
 
-#green {
+#fourth-color {
   background-color: green;
 }
