--- a/style.css
+++ b/style.css
@@ -2,24 +2,24 @@ table {
   margin: 0px;
 }
 .color {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid black);
   width: 40px;
   height: 40px;
 }
 .black {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
 }
 .red {
-  background-color: rgb(255, 0, 0)  
+  background-color: red;  
 }
 .blue {
-  background-color: rgb(0, 0, 255);
+  background-color: blue;
 }
 .green{
-  background-color: rgb(0, 255, 0);
+  background-color: green;
 }
 .pixel {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   width: 40px;
   height: 40px;
   border: 1px solid black;
