--- a/style.css
+++ b/style.css
@@ -30,14 +30,17 @@ body {
   border-spacing: 0;
 }
 
+/* height: 38px;
+width: 39px; */
+
 .pixel {
-  height: 38px;
-  width: 39px;
-  border: 1px solid black;
+  height: 40px;
+  width: 40px;
+  outline: 1px solid black;
   background-color: white;
 }
 
-tr .pixel:first-child {
+/* tr .pixel:first-child {
   height: 38px;
   width: 38px;
-}
+} */
