--- a/style.css
+++ b/style.css
@@ -20,22 +20,20 @@ display: flex;
 #preto {
     background-color: black;
 }
-#pixel-board{
-   
-    border: black solid 1px;
-    width: 25px;
-    height: 25px;
-    display:table;
+#pixel-board {
+    
+    display: flex;
+    flex-wrap: wrap;
+    width: 225px;
+    margin-left: 20px;
 }
- .pixel {
-  
+.pixel {
     width: 40px;
     height: 40px;
-    border: solid black 1px;
+    border: black solid 1px;
     background-color: white;
-    display: table-cell;
 }
 #linha1{
-    width: 250px;
-    height: 40px;
+    
+
 }
