--- a/style.css
+++ b/style.css
@@ -28,3 +28,19 @@
 #blue {
   background-color: blue;
 }
+
+#pixel-board {
+  display: table;
+}
+
+.pixel-board-tr {
+  display: table-row;
+}
+
+.pixel {
+  display: table-cell;
+  border: 1px solid black;
+  height: 40px;
+  width: 40px;
+  background-color: white;
+}
