Adicione a pagina em quadro de pixels, com 25 pixels

--- a/style.css
+++ b/style.css
@@ -12,3 +12,10 @@ body {
   width: 100px;
   height: 100px;
 }
+
+.pixel {
+  border: 1px solid black;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+}
