--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ width: 39px; */
 .pixel {
   height: 40px;
   width: 40px;
-  outline: 1px solid black;
+  border: 1px solid black;
   background-color: white;
 }
 
