--- a/style.css
+++ b/style.css
@@ -1,46 +1,22 @@
-.class {
-    border: 1px;
-    border-style:solid;
-    
-}
-
 .color {
-    height: 10px;
-    width: 10px;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    border: solid 1px black;
     
 }
-
 #black {
-    color: black;
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
-    left: 10px;
-}
-
-#blue {
-    color: blue;
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
-    left: 25px;
-    
-}
-
-#green {
-    color: green;
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
-    display: inline;
-    right: 25px;
+    background-color: black;
 }
 
 #red {
-    color: red;
-    border-width: 1px;
-    border-color: black;
-    border-style:solid;
-    display: inline;
-    right: 10px;
+    background-color: red;
+}
+
+#blue {
+    background-color:blue;
+}
+
+#green {
+    background-color: green;
 }
