Criando o iddas cores no css

--- a/style.css
+++ b/style.css
@@ -27,19 +27,19 @@ section {
   height: 40px;
 }
 
-#preto {
+#vermelho {
   background-color: red;
   width: 40px;
   height: 40px;
 }
 
-#preto {
+#azul {
   background-color: blue;
   width: 40px;
   height: 40px;
 }
 
-#preto {
+#verde {
   background-color: green;
   width: 40px;
   height: 40px;
