--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-#color-pallet ,.color{
+#color-pallet ,.color {
     border: 1px solid black;
     display: inline-block;
     height: 45px;
     margin-left: 5px;
     width: 45px;
   }
+
+.pixel {
+    border: 1px solid black;
+    height: 45px;
+    width: 45px;
+    background-color: 'white';
+}
