--- a/style.css
+++ b/style.css
@@ -1,25 +1,21 @@
-.display-table {
-  display: table; 
+.color {
+  padding: 50px;
+  border-width: 3%;
+  border-style: solid;
+  border-color: black;
 }
-.display-table > div { 
-  display: table-row;   
-}
-.display-table > div > div { 
-  display: table-cell;
-  padding: 50px;  
-}
-#c1 {
+.c1 {
   background-color: black;
 }
-#c2 {
-  background-color: violet;
-}
-#c3 {
+.c2 {
   background-color: magenta;
 }
-#c4 {
-  background-color: aqua;
+.c3 {
+  background-color: blue;
 }
-#color-palette {
-  margin: 50px;
+.c4 {
+  background-color: green;
+}
+.divn {
+  padding: 25px; 
 }
