--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   --color2: #14213d;
   --color3: #fca311;
   --color4: #9e2a2b;
+  --color5: #fff;
 }
 
 #color-palette {
@@ -33,4 +34,22 @@
 
 .color4 {
   background-color: var(--color4);
+}
+
+.color5 {
+  background-color: var(--color5);
+}
+
+#pixel-board {
+  border: black solid 1px;
+  padding: 10px;
+  width: 210px;
+  margin: 0 auto;
+}
+
+.pixel {
+  border: solid black 1px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
 }
