--- a/style.css
+++ b/style.css
@@ -25,10 +25,16 @@
     flex-wrap: wrap;
     width:250px;
     margin-left: 20px;
+    margin-top: 20px;
 }
 .pixel {
     width: 40px;
     height: 40px;
     border: black solid 1px;
     background-color: white;
+}
+
+.clear-board{
+    margin-left: 80px;
+    margin-top: 20px;
 }
