--- a/style.css
+++ b/style.css
@@ -36,3 +36,14 @@ body {
 #orange {
   background-color: orange;
 }
+
+#pixel-board {
+  margin: 10px auto;
+}
+
+.pixel {
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+}
