Adicionado input e botao para criar o board dinamicamente (ainda sem funcionar) // Criada funcao de criacao do board baseada em uma variavel

--- a/style.css
+++ b/style.css
@@ -75,3 +75,13 @@
   display: block;
   margin: 30px auto;
 }
+
+/* ------------------------------------ */
+
+/* INPUT AND BUTTON */
+#input {
+  display: flex;
+  width: 20%;
+  justify-content: space-around;
+  margin: 15px auto;
+}
