--- a/style.css
+++ b/style.css
@@ -1,5 +1,58 @@
+body {
+  text-align: center;
+  background-color: #f6f6f6;
+  font-family: Roboto, sans-serif;
+  margin: 50px 0;
+}
+
+#title {
+  font-size: 62px;
+  color: #5f5f5f;
+  font-family: Pacifico, cursive;
+  font-style: italic;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
 #color-palette {
   height: 42px;
+  margin-bottom: 15px;
+}
+
+#size-input {
+  margin-bottom: 15px;
+}
+
+.button {
+  font-size: 16px;
+  font-weight: 700;
+  padding: 10px 30px;
+  border: none;
+  background-color: #525252;
+  color: whitesmoke;
+  border-radius: 8px;
+}
+
+#board-size {
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  font-weight: 700;
+  width: 80px;
+  padding: 10px 5px;
+  outline: none;
+  text-align: center;
+  color: #4e4e4e;
+  background-color: #dfdfdf;
+}
+
+::placeholder {
+  color: #979797;
+}
+
+input::-webkit-outer-spin-button , input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
 }
 
 .color {
@@ -8,6 +61,7 @@
   height: 40px;
   border: 1px solid black;
   margin-right: 5px;
+  border-radius: 15px;
 }
 
 .row {
@@ -23,5 +77,5 @@
 }
 
 #clear-board {
-  margin: 15px 0;
+  margin-bottom: 15px;
 }
