--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@
   border: solid 1px black;
 }
 
+.pixel {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: solid 1px black;
+}
+
 #black {
   background-color: black;
 }
