--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body {
 }
 
 h1 {
-	font-size: 40px;
-	font-family: 'Courier New';
-	letter-spacing: 0.5px;
-	margin-bottom: 20px;
+  font-size: 40px;
+  font-family: "Courier New";
+  letter-spacing: 0.5px;
+  margin-bottom: 20px;
 }
 
 ul {
@@ -57,9 +57,9 @@ tr {
 }
 
 td {
-	display: table-cell;
-	width: 40px;
-	height: 40px;
-	border: 1px solid black;
-	background-color: white;
+  display: table-cell;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  background-color: white;
 }
