--- a/style.css
+++ b/style.css
@@ -25,12 +25,33 @@
   border: 1px solid black;
   width: 40px;
   height: 40px;
+}
+
+.cor {
   background-color: white;
+}
+
+.preto{
+    background-color: black;
+}
+
+.vermelho {
+    background-color: red;
+}
+
+.azul {
+    background-color: blue;
+}
+
+.verde {
+    background-color: green;
 }
 
 #pixel-board {
   display: table;
   border-collapse: collapse;
+  width: 25px;
+  height: 25px;
 }
 
 .pixelalign {
