--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 .pixel {
     width: 100px;
     height: 100px;
+    background-color: white;
     border: 1px solid black;
     padding: 5px;  
     box-sizing: border-box;
