--- a/style.css
+++ b/style.css
@@ -1,30 +1,19 @@
-#title {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 2%;
-}
-
-#color-palette {
-  display: flex;
-}
-
-.color {
-  border: 1px solid black;
-  width: 50px;
-  height: 50px;
-}
-
-#black {
-  background-color: black;
-}
-
-#blue {
-    background-color: blue;
-}
-
-#red {
-    background-color:red;
-}
-
-#yellow {
-    background-color: yellow;
-}
+h1 {
+    text-align: center;
+    color:blue;
+  }
+  
+  .color {
+    border: 1px solid black;
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    margin: 5px;
+  }
+  
+  .pixel {
+    border: 1px solid black;
+    height: 40px;
+    width: 40px;
+    background-color: white;
+  }
