--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-#title {
 
-}
 #color-palette {
 
 }
@@ -21,4 +19,19 @@
 }
 #yellow {
   background-color: yellow;
+}
+.white {
+  background-color: white;
+}
+#pixel-board {
+  display: table; 
+}
+.line{ 
+  display: table-row;
+}
+.pixel{ 
+  display: table-cell; 
+  width: 40px;
+  height: 40px;
+  border: solid 1px black;
 }
