--- a/style.css
+++ b/style.css
@@ -38,10 +38,16 @@ body {
 }
 
 #pixel-board {
+  display: table;
   margin: 10px auto;
 }
 
+.tr {
+  display: table-row;
+}
+
 .pixel {
+  display: table-cell;
   background-color: white;
   width: 40px;
   height: 40px;
