--- a/style.css
+++ b/style.css
@@ -12,4 +12,19 @@ header {
   border: black solid 1px;
   width: 40px;
   height: 40px;
+  margin: 2px;
+}
+
+#pixel-board {
+  max-width: 250px;
+  margin-left: 530px;
+  margin-top: 50px;
+}
+
+.pixel {
+  border: black solid 1px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  margin: 2px;
 }
