--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@
   border: 1px solid black;
   padding: 5px;
 }
+
+li:hover {
+  width: 50px;
+  height: 50px;
+}
+
+li:active {
+  width: 25px;
+  height: 25px;
+
+}
