--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
+#pixel-board {
+  display: table;
+}
+
+.palette {
+  display: table-row;
+  margin: 5px;
+}
+
 .color {
-  width: 20px;
-  height: 20px;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  display: table-cell;
+  margin: 5px;
+}
+
+.pixel {
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
 }
