--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.title {
+  
+}
+
+.color-palette {
+  margin-bottom: 50px;
+}
+
 .color {
   border: 1px solid black;
   display: table-cell; 
@@ -18,4 +26,15 @@
 
 .color:nth-of-type(4) {
   background-color: green;
+}
+
+.pixel-board {
+  display: table;
+}
+
+.pixel {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
 }
