--- a/style.css
+++ b/style.css
@@ -4,13 +4,24 @@
 
 #color-pallete {
   display: flex;
-  margin-right: 2px;
-
 }
 
 .color {
   border: black solid 1px;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   display: inline-block;
+}
+
+.pixel {
+  border: solid 1px black;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin: 1px;
+  background-color: white;
+}
+
+#pixel-board {
+ max-width: 225px;
 }
