--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 #title {
     text-align: center;
 }
+#color-palette {
+    display: flex;
+}
+
+.color {
+    border: black solid 1px;
+    width: 50px;
+    height: 50px;
+    margin-right: 5px;
+}
