--- a/style.css
+++ b/style.css
@@ -11,3 +11,15 @@
     height: 50px;
     margin-right: 5px;
 }
+
+#pixel-board {
+    max-width: 210px;
+}
+
+.pixel {
+    border: black solid 1px;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    margin: 0;
+}
