--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
   background-color: orangered;
 }
 
+#pixel-board {
+  background-color: (255, 255, 255);
+}
+
 .pixel {
   border: black solid 1px;
   width: 100px;
