--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#pixel-board {
+#color-palette {
   display: table;
 }
 
@@ -15,8 +15,18 @@
   margin: 5px;
 }
 
-.pixel {
+#pixel-board {
+  display: table;
+}
+
+.pixelLine {
+  display: table-row;
+  margin: 5px;
+}
+
+.pixelColumn {
   width: 50px;
   height: 50px;
   border: 1px solid black;
+  display: table-cell;
 }
