Requisito 7 - feito troca das corres

--- a/style.css
+++ b/style.css
@@ -20,17 +20,12 @@
   background-color: black;
 }
 
-.selected {
-  background-color: black;
-
-}
-
 .blue {
   background-color: blue;
 }
 
 .pink {
-  background-color: pink;
+  background-color: green;
 }
 
 .red {
