--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ width: 39px; */
   height: 40px;
   width: 40px;
   border: 1px solid black;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: white;
 }
 
 /* tr .pixel:first-child {
